--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
-<title>华正大数据平台登录</title>
+<title>PUSHIO</title>
 <meta http-equiv="Expires" content="0">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Cache-control" content="no-cache">
@@ -21,14 +21,14 @@
 </head>
 <body>
 	<div class="page-container">
-	
+	    <h1>PUSHIO功能演示</h1>
 		<h1>登录</h1>
 		<form>
 			<input type="text" name="username" class="username"
-				placeholder="请输入您的用户名！"> <input type="password"
-				name="password" class="password" placeholder="请输入您的用户密码！"> <input
+				placeholder="测试帐号为:PUSHIO"> <input type="password"
+				name="password" class="password" placeholder="测试密码为:PUSHIO"> <input
 				type="Captcha" class="Captcha" name="loginCode"
-				placeholder="请输入验证码！"> <img src="captcha.do" id="captchaImg" />
+				placeholder="请输入验证码！"> <img src="imgcode" id="captchaImg" />
 			<div class="errorresult"></div>
 			<button type="button" class="submit_button">登录</button>
 			<label> <a href="">注册</a>
@@ -54,7 +54,7 @@
 			}
 		});
 		$(".page-container img").on("click", function() {
-			$(this).prop("src", "captcha.do?" + Math.random());
+			$(this).prop("src", "imgcode?" + Math.random());
 		});
 
 		function submitForm() {
@@ -87,15 +87,15 @@
 						$(".errorresult").html(data.message);
 						$(".Captcha").focus();
 						$(".page-container img").prop("src",
-								"captcha.do?" + Math.random());
+								"imgcode?" + Math.random());
 					}
 				},
 				cache : false,
 				timeout : 5000,
 				error : function() {
-					$(".errorresult").html("登录时出现通讯错误,请联系信息中心！");
+					$(".errorresult").html("登录时出错了！");
 					$(".page-container img").prop("src",
-							"captcha.do?" + Math.random());
+							"imgcode?" + Math.random());
 				}
 			});
 		}
